# src/modules/lessons/lessons.controller.ts
@@ -1,34 +1,35 @@
-import { Controller, Get, Post, Body, Param } from '@nestjs/common';
+import { applyDecorators, SetMetadata, UnauthorizedException } from "@nestjs/common";
+import { Controller, Get, Post, Body, Param,  } from '@nestjs/common';
 import { LessonsService } from './lessons.service';
-import { ApiBearerAuth, ApiOperation, ApiResponse, ApiTags, } from '@nestjs/swagger';
+import { ApiBasicAuth, ApiBearerAuth, ApiCreatedResponse, ApiOperation, ApiResponse, ApiTags, ApiUnauthorizedResponse, } from '@nestjs/swagger';
 import { LessonEntity } from './lesson.entity';
-import { AddLessonDto } from './add-lesson.dto';
-import { AddEvaluationDto } from './add-evaluation.dto';
+import { AddLessonDto } from './dto/add-lesson.dto';
+import { AddEvaluationDto } from './dto/add-evaluation.dto';
+import { AddLessonAnswerDto } from './dto/add-lesson-answer.dto';
+import { AddEvaluationAnswerDto } from '../evaluations/add-evaluation-answer.dto';
 
 @ApiTags("Lessons")
 @Controller('api/lessons')
+@ApiBasicAuth("Token auth")
+@ApiUnauthorizedResponse({type: UnauthorizedException,})
 export class LessonsController {
     constructor(private lessonsService: LessonsService) {}
     @Get()
-    @ApiResponse({
-        status: 200,
-        description: 'Lesson list here',
-        type: LessonEntity,
-      })
+    @ApiCreatedResponse({description: 'Lesson list here', type: [LessonEntity]})
     lessonList() {
         return this.lessonsService.lessonList();
     }
 
     @Post()
     @ApiOperation({ summary: 'add lesson:' })
-    @ApiResponse({ status: 403, description: 'Forbidden.' })
+    @ApiCreatedResponse({ description: 'The record has been successfully created.', type: AddLessonAnswerDto})
     addLesson(@Body() body: AddLessonDto) {
         return this.lessonsService.addLesson(body);
     }
 
     @Post("/:id/evaluations")
-    @ApiBearerAuth()
-    async ddEvaluation(@Param("id") lessonId: string, @Body() body: AddEvaluationDto) {
+    @ApiCreatedResponse({ description: 'successfully created.', type: AddEvaluationAnswerDto})
+    async addEvaluation(@Param("id") lessonId: string, @Body() body: AddEvaluationDto) {
         return await this.lessonsService.addEvaluation(lessonId, body);
     }
 }
