# src/modules/simplest-auth/auth.controller.ts
@@ -2,7 +2,10 @@ import { Body, Controller, Post } from "@nestjs/common";
 import { AuthClientDto } from "./auth-client.dto";
 import { AuthService } from "./auth.service";
 import { SetAuthModeOff } from "./auth.decorator";
+import { ApiCreatedResponse, ApiTags } from "@nestjs/swagger";
+import { AuthClientAnswerDto } from "./auth-client-answer.dto";
 
+@ApiTags("Auth")
 @Controller('api/auth')
 export class AuthController {
     constructor(
@@ -11,8 +14,8 @@ export class AuthController {
 
     @SetAuthModeOff()
     @Post()
+    @ApiCreatedResponse({description: 'token created', type: AuthClientAnswerDto})
     async reg(@Body() body: AuthClientDto) {
-        console.log("AuthController.reg...");
         return await this.authService.reg(body);
     }
 }
