# src/modules/users/dto/add-pupil-answer.dto.ts
@@ -1,6 +1,8 @@
 import { ApiProperty } from "@nestjs/swagger";
 
-export class CreateUserDto {
+export class AddPupilAnswerDto {
+    @ApiProperty({example: "1"})
+    "id": string;
     @ApiProperty({example: "Джонни"})
     name: string;
     @ApiProperty({example: "silverhand@mail.com"})
